--- a/platform/build.gradle
+++ b/platform/build.gradle
@@ -20,7 +20,11 @@
 dependencies {
     api project(':core')
 
+    implementation 'cloud.commandframework:cloud-core:1.6.1'
     implementation "net.kyori:adventure-platform-api:4.0.1"
+    implementation "org.spongepowered:configurate-core:4.1.2"
+    implementation "org.spongepowered:configurate-yaml:4.1.2"
 
     testImplementation(testFixtures(project(":core")))
+    testFixturesImplementation "org.spongepowered:configurate-yaml:4.1.2"
 }
