cleanup and implement auto joined channels

--- a/platform/build.gradle
+++ b/platform/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     testImplementation(testFixtures(project(':core')))
     testFixturesImplementation 'org.spongepowered:configurate-yaml:4.1.2'
     testFixturesImplementation 'cloud.commandframework:cloud-core:1.6.1'
+    testFixturesImplementation 'org.apache.commons:commons-lang3:3.12.0'
 }
