flatten messenger and replace messages with repository

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,8 +18,8 @@
  */
 
 rootProject.name = 'sChat'
-include 'api'
 include 'core'
+include 'ui'
 include 'platform'
 include 'platform:bukkit'
 include 'example'
