--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -17,24 +17,8 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
-package net.silthus.schat.platform.commands;
+dependencies {
+    implementation project(':core')
 
-import cloud.commandframework.annotations.Argument;
-import cloud.commandframework.annotations.CommandMethod;
-import cloud.commandframework.annotations.ProxiedBy;
-import net.silthus.schat.channel.Channel;
-import net.silthus.schat.chatter.Chatter;
-import net.silthus.schat.checks.Check;
-
-public class ChannelCommands {
-
-    @ProxiedBy("ch")
-    @CommandMethod(value = "channel join <channel>")
-    public void joinChannel(Chatter chatter, @Argument Channel channel) {
-        try {
-            chatter.join(channel);
-        } catch (Check.Error e) {
-            throw new RuntimeException(e);
-        }
-    }
+    testImplementation(testFixtures(project(':core')))
 }
