add protocollib packet adapter

--- a/platform/bukkit/build.gradle
+++ b/platform/bukkit/build.gradle
@@ -89,14 +89,20 @@ dependencies {
 
 shadowJar {
     archiveClassifier.set("")
-//    dependencies {
-//        include(dependency('cloud.commandframework::'))
-//        include(dependency('net.kyori::'))
-//        include(dependency('org.bstats::'))
-//    }
-//    relocate 'cloud.commandframework', "${packageName}.lib.commands"
-//    relocate 'net.kyori', "${packageName}.lib.kyori"
-//    relocate 'org.bstats', "${packageName}.lib.bstats"
+    dependencies {
+        include(project(':core'))
+        include(project(':platform'))
+        include(dependency('cloud.commandframework::'))
+        include(dependency('io.leangen.geantyref::'))
+        include(dependency('org.spongepowered::'))
+        include(dependency('net.kyori::'))
+        include(dependency('org.bstats::'))
+    }
+    relocate 'cloud.commandframework', "${packageName}.lib.commands"
+    relocate 'org.spongepowered.configurate', "${packageName}.lib.configurate"
+    relocate 'io.leangen.geantyref', "${packageName}.lib.typetoken"
+    relocate 'net.kyori', "${packageName}.lib.kyori"
+    relocate 'org.bstats', "${packageName}.lib.bstats"
 }
 
 tasks.build.dependsOn(shadowJar)
