--- a/build.gradle
+++ b/build.gradle
@@ -108,6 +108,7 @@ subprojects {
         testImplementation 'org.mockito:mockito-core:4.0.0'
         testImplementation 'org.assertj:assertj-core:3.21.0'
 
+        testFixturesImplementation 'org.mockito:mockito-core:4.0.0'
         testFixturesImplementation 'org.assertj:assertj-core:3.21.0'
         testFixturesImplementation 'net.kyori:adventure-text-serializer-plain:4.9.3'
     }
