--- a/settings.gradle
+++ b/settings.gradle
@@ -18,8 +18,9 @@
  */
 
 rootProject.name = 'sChat'
-include 'core'
 include 'api'
+include 'core'
+include 'ui'
 include 'platform'
 include 'platform:bukkit'
 include 'example'
