--- a/platform/velocity/build.gradle
+++ b/platform/velocity/build.gradle
@@ -11,3 +11,23 @@ dependencies {
 
     annotationProcessor 'com.velocitypowered:velocity-api:3.0.1'
 }
+
+shadowJar {
+    archiveClassifier.set("")
+    dependencies {
+        include(project(':api'))
+        include(project(':core'))
+        include(project(':platform'))
+        include(project(':ui'))
+        include(dependency('cloud.commandframework::'))
+        include(dependency('io.leangen.geantyref::'))
+        include(dependency('org.spongepowered::'))
+        include(dependency('net.kyori::'))
+        include(dependency('org.bstats::'))
+    }
+    relocate 'cloud.commandframework', "${packageName}.lib.commands"
+    relocate 'org.spongepowered.configurate', "${packageName}.lib.configurate"
+    relocate 'io.leangen.geantyref', "${packageName}.lib.typetoken"
+    relocate 'net.kyori', "${packageName}.lib.kyori"
+    relocate 'org.bstats', "${packageName}.lib.bstats"
+}
