fixed view not updating after joining channel

--- a/build.gradle
+++ b/build.gradle
@@ -116,5 +116,7 @@ subprojects {
         newLine = true
     }
 
+    tasks.build.dependsOn(updateLicenses)
+
     defaultTasks 'licenseFormat', 'build'
 }
