--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -2,4 +2,6 @@ dependencies {
     api project(':core')
 
     testImplementation(testFixtures(project(':core')))
+
+    testFixturesImplementation 'net.kyori:adventure-text-minimessage:4.1.0-SNAPSHOT'
 }
