add acceptance tests

--- a/settings.gradle
+++ b/settings.gradle
@@ -23,7 +23,7 @@ include 'core'
 include 'ui'
 include 'platform'
 include 'platform:bukkit'
-include 'example'
 include 'platform:velocity'
-findProject(':platform:velocity')?.name = 'velocity'
+include 'example'
+include 'acceptance'
 
