--- a/platform/build.gradle
+++ b/platform/build.gradle
@@ -43,6 +43,8 @@ subprojects {
 }
 
 dependencies {
+    implementation project(':features:globalchat')
+
     implementation 'cloud.commandframework:cloud-core:1.6.1'
     implementation 'cloud.commandframework:cloud-annotations:1.6.1'
 
