--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -62,6 +62,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Acceptance Tests
+        run: ./gradlew cucumber
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: deblockt/cucumber-report-annotations-action@v1.7
+        with:
+          access-token: ${{ secrets.GITHUB_TOKEN }}
+          path: "**/cucumber-report.json"
+
       - name: Create Coverage
         run: ./gradlew jacocoTestReport
         env:
@@ -78,43 +88,8 @@ jobs:
         with:
           files: "**/build/test-results/**/*.xml"
 
-  acceptance-tests:
-    runs-on: ubuntu-18.04
-    steps:
-      - name: Set up JDK 17
-        uses: actions/setup-java@v1
-        with:
-          java-version: 17
-
-      - name: Cache Gradle
-        id: cache-gradle
-        uses: actions/cache@v1
-        with:
-          path: ~/.gradle
-          key: ${{ runner.os }}-gradle
-
-      - uses: actions/checkout@v1
-
-      - name: Grant execute permission to gradlew
-        run: chmod +x gradlew
-
-      - name: Build
-        run: ./gradlew build -x test
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Acceptance Tests
-        run: ./gradlew cucumber
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - uses: deblockt/cucumber-report-annotations-action@v1.7
-        with:
-          access-token: ${{ secrets.GITHUB_TOKEN }}
-          path: "**/cucumber-report.json"
-
   release:
-    needs: [ build, test, acceptance-tests ]
+    needs: [ build, test ]
     if: github.ref == 'refs/heads/master' || 'refs/heads/beta' || github.ref == 'refs/heads/alpha'
 
     runs-on: ubuntu-18.04
