refactor: extract separate server and proxy plugin

--- a/platform/velocity/src/main/resources/config.yml
+++ b/platform/velocity/src/main/resources/config.yml
@@ -1,11 +1,1 @@
-channels:
-  global:
-    name: Global
-    settings:
-      protected: false
-      auto_join: true
-  team:
-    name: Team
-    settings:
-      protected: true
-      auto_join: true
+messenger: pluginmessage
