chore: update archive base names to match platform

--- a/platform/bungeecord/build.gradle
+++ b/platform/bungeecord/build.gradle
@@ -1,3 +1,6 @@
+
+archivesBaseName = "${project.property("pluginName")}-bungeecord"
+
 repositories {
     maven { url = "https://oss.sonatype.org/content/repositories/snapshots" }
 }
