--- a/platform/velocity/build.gradle
+++ b/platform/velocity/build.gradle
@@ -1,3 +1,5 @@
+archivesBaseName = "${project.property("pluginName")}-velocity"
+
 repositories {
     maven { url = "https://nexus.velocitypowered.com/repository/maven-public/" }
 }
