--- a/platform/build.gradle
+++ b/platform/build.gradle
@@ -19,14 +19,17 @@
 
 allprojects {
     dependencies {
-        api project(':core')
-        api project(':ui')
+        implementation project(':api')
+        implementation project(':core')
+        implementation project(':ui')
 
+        testImplementation(testFixtures(project(':api')))
         testImplementation(testFixtures(project(":core")))
         testImplementation(testFixtures(project(":ui")))
 
         testFixturesImplementation(testFixtures(project(':api')))
         testFixturesImplementation(testFixtures(project(':core')))
+        testFixturesImplementation(testFixtures(project(':ui')))
 
         testFixturesImplementation 'org.spongepowered:configurate-core:4.1.2'
     }
@@ -40,6 +43,30 @@ subprojects {
 
         testFixturesImplementation(testFixtures(project(':platform')))
     }
+
+    shadowJar {
+        archiveClassifier.set("")
+        dependencies {
+            include(project(':api'))
+            include(project(':core'))
+            include(project(':platform'))
+            include(project(':ui'))
+            include(project(':features:globalchat'))
+            include(dependency('cloud.commandframework::'))
+            include(dependency('io.leangen.geantyref::'))
+            include(dependency('org.spongepowered::'))
+            include(dependency('net.kyori::'))
+            include(dependency('org.bstats::'))
+        }
+        relocate 'cloud.commandframework', "${packageName}.lib.commands"
+        relocate 'org.spongepowered.configurate', "${packageName}.lib.configurate"
+        relocate 'io.leangen.geantyref', "${packageName}.lib.typetoken"
+        relocate 'net.kyori', "${packageName}.lib.kyori"
+        relocate 'org.bstats', "${packageName}.lib.bstats"
+    }
+
+    tasks.build.dependsOn(shadowJar)
+    tasks.publish.dependsOn(shadowJar)
 }
 
 dependencies {
