fix: setting default not used in is(...) method

--- a/platform/bukkit/src/main/resources/config.yml
+++ b/platform/bukkit/src/main/resources/config.yml
@@ -5,8 +5,10 @@ channels:
     settings:
       protected: false
       auto_join: true
+      global: true
   team:
     name: Team
     settings:
       protected: true
       auto_join: true
+      global: true
