--- a/acceptance/build.gradle
+++ b/acceptance/build.gradle
@@ -9,8 +9,12 @@ dependencies {
     testImplementation testFixtures(project(':platform'))
 
     testImplementation 'io.cucumber:cucumber-java:7.2.3'
+    testImplementation 'javax.inject:javax.inject:1'
     testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.2.3'
     testImplementation 'org.junit.platform:junit-platform-suite:1.8.2'
+
+    testImplementation 'com.google.inject:guice:5.1.0'
+    testImplementation 'io.cucumber:cucumber-guice:7.2.3'
 }
 
 cucumber {
