--- a/platform/build.gradle
+++ b/platform/build.gradle
@@ -86,4 +86,5 @@ dependencies {
     testFixturesImplementation 'org.spongepowered:configurate-yaml:4.1.2'
     testFixturesImplementation 'cloud.commandframework:cloud-core:1.6.1'
     testFixturesImplementation 'org.apache.commons:commons-lang3:3.12.0'
+    testFixturesImplementation 'net.kyori:adventure-text-minimessage:4.10.0-SNAPSHOT'
 }
