--- a/acceptance/build.gradle
+++ b/acceptance/build.gradle
@@ -5,8 +5,10 @@ plugins {
 dependencies {
     testImplementation project(':core')
     testImplementation project(':platform')
+    testImplementation project(':ui')
     testImplementation testFixtures(project(':core'))
     testImplementation testFixtures(project(':platform'))
+    testImplementation testFixtures(project(':ui'))
 
     testImplementation 'io.cucumber:cucumber-java:7.2.3'
     testImplementation 'javax.inject:javax.inject:1'
