--- a/platform/velocity/build.gradle
+++ b/platform/velocity/build.gradle
@@ -9,3 +9,22 @@ dependencies {
 
     annotationProcessor 'com.velocitypowered:velocity-api:3.0.1'
 }
+
+shadowJar {
+    archiveClassifier.set("")
+    dependencies {
+//        exclude(dependency('net.kyori:adventure-api:'))
+//        exclude(dependency('net.kyori:adventure-platform-api:'))
+//        exclude(dependency('net.kyori:adventure-text-minimessage:'))
+//        exclude(dependency('net.kyori:adventure-text-serializer-plain:'))
+//        exclude(dependency('net.kyori:adventure-text-serializer-gson:'))
+//        exclude(dependency('net.kyori:adventure-text-serializer-legacy:'))
+//        exclude(dependency('net.kyori:adventure-key:'))
+//        exclude(dependency('net.kyori:examination-api:'))
+//        exclude(dependency('net.kyori:examination-string:'))
+        include(dependency('net.kyori:event-api:'))
+        include(dependency('net.kyori:adventure-text-minimessage:'))
+    }
+
+    relocate "net.kyori.event", "${packageName}.lib.event"
+}
