--- a/platform/src/testFixtures/resources/test-config.yml
+++ b/platform/src/testFixtures/resources/test-config.yml
@@ -5,4 +5,9 @@ channels:
     settings:
       protected: true
       auto_join: true
+      format:
+        message: "<yellow><source.display_name><gray>: <text>"
+        active_channel:
+          color: red
+          decoration: underlined
   invalid: null
