--- a/build.gradle
+++ b/build.gradle
@@ -78,11 +78,11 @@ subprojects {
     }
 
     dependencies {
-        api 'net.kyori:adventure-api:4.9.3'
+        api 'net.kyori:adventure-api:4.10.0-SNAPSHOT'
 
         implementation 'net.kyori:adventure-text-minimessage:4.10.0-SNAPSHOT'
-        implementation 'net.kyori:adventure-text-serializer-plain:4.9.3'
-        implementation 'net.kyori:adventure-text-serializer-gson:4.9.3'
+        implementation 'net.kyori:adventure-text-serializer-plain:4.10.0-SNAPSHOT'
+        implementation 'net.kyori:adventure-text-serializer-gson:4.10.0-SNAPSHOT'
         implementation 'net.kyori:event-api:3.0.0'
 
         implementation 'org.jetbrains:annotations:22.0.0'
@@ -95,7 +95,7 @@ subprojects {
         testFixturesImplementation 'net.kyori:event-api:3.0.0'
         testFixturesImplementation 'org.mockito:mockito-core:4.0.0'
         testFixturesImplementation 'org.assertj:assertj-core:3.21.0'
-        testFixturesImplementation 'net.kyori:adventure-text-serializer-plain:4.9.3'
+        testFixturesImplementation 'net.kyori:adventure-text-serializer-plain:4.10.0-SNAPSHOT'
     }
 
     test {
