--- a/platform/bukkit/src/main/resources/config.yml
+++ b/platform/bukkit/src/main/resources/config.yml
@@ -1,3 +1,16 @@
+#  +--------------------------------------------------------+
+#  |                                                        |
+#  |                _________ .__            __             |
+#  |           _____\_   ___ \|  |__ _____ _/  |_           |
+#  |          /  ___/    \  \/|  |  \\__  \\   __\          |
+#  |          \___ \\     \___|   Y  \/ __ \|  |            |
+#  |         /____  >\______  |___|  (____  |__|            |
+#  |              \/        \/     \/     \/                |
+#  |                                                        |
+#  |     Supercharge your Minecraft Chat Experience!        |
+#  |                                                        |
+#  +--------------------------------------------------------+
+
 messenger: pluginmessage
 channels:
   global:
