fix(build): exclude config.yml from version expansion

--- a/build.gradle
+++ b/build.gradle
@@ -108,7 +108,9 @@ subprojects {
 
     processResources {
         project.properties.put("version", this.version)
-        expand project.properties
+        filesMatching('*.properties') {
+            expand(project.properties)
+        }
     }
 
     license {
