feat(cmd): add non distributive /schat reload command

--- a/platform/src/testFixtures/resources/test-config.yml
+++ b/platform/src/testFixtures/resources/test-config.yml
@@ -10,4 +10,8 @@ channels:
         active_channel:
           color: red
           decoration: underlined
+  global:
+    name: Global
+    settings:
+      global: true
   invalid: null
