--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ gradle-plugin-indra = "2.1.1"
 gradle-plugin-testlog = "3.1.0"
 gradle-plugin-lombok = "6.4.1"
 gradle-plugin-shadow = "7.1.2"
+gradle-plugin-cucumber = "0.0.10"
 
 checkstyle-plugin-stylecheck = "0.1"
 
@@ -16,8 +17,10 @@ mockbukkit = "1.15.5"
 
 checkerframework = "3.21.2"
 junit-jupiter = "5.8.1"
+junit-platform = "1.8.2"
 assertj = "3.21.0"
 mockito = "4.0.0"
+cucumber = "7.2.3"
 
 event-api = "3.0.0"
 adventure-api = "4.10.0-SNAPSHOT"
@@ -26,6 +29,7 @@ examination = "1.3.0"
 configurate = "4.1.2"
 cloud-commands = "1.6.1"
 gson = "2.9.0"
+guice = "5.1.0"
 
 [libraries]
 gradle-plugin-indra = { module = "net.kyori:indra-common", version.ref = "gradle-plugin-indra" }
@@ -34,14 +38,23 @@ gradle-plugin-indra-crossdoc = { module = "net.kyori:indra-crossdoc", version.re
 gradle-plugin-testlog = { module = "com.adarshr:gradle-test-logger-plugin", version.ref = "gradle-plugin-testlog" }
 gradle-plugin-lombok = { module = "io.freefair.gradle:lombok-plugin", version.ref = "gradle-plugin-lombok" }
 gradle-plugin-shadow = { module = "gradle.plugin.com.github.johnrengelman:shadow", version.ref = "gradle-plugin-shadow" }
+gradle-plugin-cucumber = { module = "se.thinkcode:gradle-cucumber-runner", version.ref = "gradle-plugin-cucumber" }
 
 checkstyle-plugin-stylecheck = { module = "ca.stellardrift:stylecheck", version.ref = "checkstyle-plugin-stylecheck" }
 
 junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit-jupiter" }
 junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit-jupiter" }
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit-jupiter" }
+junit-platform-suite = { module = "org.junit.platform:junit-platform-suite", version.ref = "junit-platform" }
 assertj-core = { module = "org.assertj:assertj-core", version.ref = "assertj" }
 mockito = { module = "org.mockito:mockito-junit-jupiter", version.ref = "mockito" }
+
+cucumber = { module = "io.cucumber:cucumber-java", version.ref = "cucumber" }
+cucumber-junit = { module = "io.cucumber:cucumber-junit-platform-engine", version.ref = "cucumber" }
+cucumber-guice = { module = "io.cucumber:cucumber-guice", version.ref = "cucumber" }
+
+guice = { module = "com.google.inject:guice", version.ref = "guice" }
+javax-inject = { module = "javax.inject:javax.inject", version = "1" }
 
 papermc = { module = "io.papermc.paper:paper-api", version.ref = "minecraft" }
 spigot = { module = "org.spigotmc:spigot-api", version.ref = "minecraft" }
