fix(release): do not trigger release on PRs

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -88,50 +88,9 @@ jobs:
         with:
           files: "**/build/test-results/**/*.xml"
 
-  snapshots:
-    needs: [ build, test ]
-    if: github.ref == 'refs/heads/develop' || 'refs/heads/next'
-    runs-on: ubuntu-18.04
-    steps:
-      - name: Set up JDK 17
-        uses: actions/setup-java@v1
-        with:
-          java-version: 17
-
-      - name: Cache Gradle
-        id: cache-gradle
-        uses: actions/cache@v1
-        with:
-          path: ~/.gradle
-          key: ${{ runner.os }}-gradle
-
-      - uses: actions/checkout@v1
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Determine whether to deploy to Central
-        id: snapshot-check
-        shell: bash
-        run: |
-          if ! cat ./gradle.properties | grep --regexp 'version\s*=\s*.*".*-SNAPSHOT"' 2>&1 >/dev/null ; then
-            echo "::set-output name=snapshot::false"
-          else
-            echo "::set-output name=snapshot::true"
-          fi
-
-      - name: Deploy to OSSRH
-        if: ${{ github.ref_type != 'tag' && steps.snapshot-check.outputs.snapshot == 'true' }}
-        run: ./gradlew -PforceSign=true publish --no-daemon
-        env:
-          ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.SONATYPE_USERNAME }}
-          ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.SONATYPE_PASSWORD }}
-          SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
-          SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
-
   release:
     needs: [ build, test ]
-    if: github.ref == 'refs/heads/master' || 'refs/heads/beta' || github.ref == 'refs/heads/alpha'
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/beta' || github.ref == 'refs/heads/alpha' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/next'
 
     runs-on: ubuntu-18.04
 
@@ -145,13 +104,6 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "16.x"
-
-      - name: Cache Gradle
-        id: cache-gradle
-        uses: actions/cache@v1
-        with:
-          path: ~/.gradle
-          key: ${{ runner.os }}-gradle
 
       - uses: actions/checkout@v1
 
@@ -173,6 +125,15 @@ jobs:
           else
             echo "::set-output name=snapshot::true"
           fi
+
+      - name: Deploy to OSSRH
+        if: ${{ github.ref_type != 'tag' && steps.snapshot-check.outputs.snapshot == 'true' }}
+        run: ./gradlew -PforceSign=true publish --no-daemon
+        env:
+          ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.SONATYPE_USERNAME }}
+          ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.SONATYPE_PASSWORD }}
+          SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
+          SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
 
       - name: Deploy to Central
         if: ${{ steps.snapshot-check.outputs.snapshot == 'false' }}
