--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,9 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 17
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
           java-version: 17
+          distribution: temurin
 
       - name: Build
         run: ./gradlew build -x test
@@ -34,6 +35,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 17
+          distribution: temurin
 
       - name: Test
         run: ./gradlew test
@@ -78,6 +80,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 17
+          distribution: temurin
 
       - name: Set up Node.js v16.x
         uses: actions/setup-node@v1
