--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -95,23 +95,4 @@ jobs:
           ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.SONATYPE_PASSWORD }}
           SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
           SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
-        run: npx --legacy-peer-deps -p @semantic-release/changelog -p @semantic-release/git -p @google/semantic-release-replace-plugin -p gradle-semantic-release-plugin -p semantic-release semantic-release
-
-      - name: Determine whether to deploy to Central
-        id: snapshot-check
-        shell: bash
-        run: |
-          if ! cat ./gradle.properties | grep --regexp 'version\s*=\s*.*".*-SNAPSHOT"' 2>&1 >/dev/null ; then
-            echo "::set-output name=snapshot::false"
-          else
-            echo "::set-output name=snapshot::true"
-          fi
-
-      - name: Deploy to Central
-        if: ${{ steps.snapshot-check.outputs.snapshot == 'false' }}
-        run: ./gradlew -PforceSign=true publish closeAndReleaseSonatypeStagingRepository --no-daemon
-        env:
-          ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.SONATYPE_USERNAME }}
-          ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.SONATYPE_PASSWORD }}
-          SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
-          SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
+        run: npx --legacy-peer-deps -p @semantic-release/changelog -p @semantic-release/git -p @google/semantic-release-replace-plugin -p @semantic-release/exec -p semantic-release semantic-release
