chore: rename master to main

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,6 +1,6 @@
 {
   "branches": [
-    "master",
+    "main",
     {
       "name": "beta",
       "prerelease": true
@@ -8,6 +8,11 @@
     {
       "name": "alpha",
       "prerelease": true
+    },
+    {
+      "name": "next",
+      "prerelease": true,
+      "channel": "SNAPSHOT"
     }
   ],
   "plugins": [
