--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -14,13 +14,15 @@ name: "CodeQL"
 on:
   push:
     branches:
-      - master
-      - beta
+      - main
+      - next
+      - rc
   pull_request:
     # The branches below must be a subset of the branches above
     branches:
-      - master
-      - beta
+      - main
+      - next
+      - rc
   schedule:
     - cron: '21 9 * * 0'
 
@@ -55,22 +57,11 @@ jobs:
         # Prefix the list here with "+" to use these queries and those in the config file.
         # queries: ./path/to/local/query, your-org/your-repo/queries@main
 
-    - name: Set up JDK 16
-      uses: actions/setup-java@v1
+    - name: Set up JDK 17
+      uses: actions/setup-java@v2
       with:
-        java-version: 16
-
-    - name: Cache Gradle
-      id: cache-gradle
-      uses: actions/cache@v1
-      with:
-        path: ~/.gradle
-        key: ${{ runner.os }}-gradle
-
-    - uses: actions/checkout@v1
-
-    - name: Grant execute permission to gradlew
-      run: chmod +x gradlew
+        java-version: 17
+        distribution: temurin
 
     - name: Build
       run: ./gradlew build -x test
