--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -68,6 +68,28 @@ jobs:
         with:
           files: "**/build/test-results/**/*.xml"
 
+  javadoc:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: temurin
+
+      - name: Build Javadocs
+        run: ./gradlew javadoc
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4.2.5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          branch: javadocs
+          folder: core/build/docs/javadoc
   release:
     needs: [ build, test ]
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release' || github.ref == 'refs/heads/next'
