--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 org.gradle.configureondemand = true
 org.gradle.parallel = true
 javadocPublishRoot = https://jd.schat.silthus.net/
+
+pluginName = sChat
 version = 1.0.0-SNAPSHOT.1
