--- a/platform/src/testFixtures/resources/test-config.yml
+++ b/platform/src/testFixtures/resources/test-config.yml
@@ -1,7 +1,8 @@
 messenger: mock
 view:
-  private_chat:
-    message_format: "<yellow><source.display_name><gray>: <text>"
+  message_format: "<aqua><<source.display_name>></aqua>: <text>"
+private_chat:
+  message_format: "<red><source.display_name><gray>: <text>"
 channels:
   test:
     name: Test
